--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,3 @@
-.package {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.package > h2 {
-  color: #333;
-  font-size: 2.5em;
-  font-family: "Lucida Sans", sans-serif;
-}
-
 /* Bootstrap Styles */
 .btn-default {
   color: #333;
@@ -21,52 +7,25 @@
 .btn-default:hover,
 .btn-default:focus,
 .btn-default:active,
-.btn-default.active,
-.open > .dropdown-toggle.btn-default {
+.btn-default.active {
   color: #333;
   background-color: #e6e6e6;
-  border-color: #adadad;
+  border-color: #9d9d9d;
 }
 .btn-default:active,
-.btn-default.active,
-.open > .dropdown-toggle.btn-default {
+.btn-default.active {
   background-image: none;
 }
 .btn-default.disabled,
-.btn-default[disabled],
-fieldset[disabled] .btn-default,
-.btn-default.disabled:hover,
-.btn-default[disabled]:hover,
-fieldset[disabled] .btn-default:hover,
-.btn-default.disabled:focus,
-.btn-default[disabled]:focus,
-fieldset[disabled] .btn-default:focus,
-.btn-default.disabled:active,
-.btn-default[disabled]:active,
-fieldset[disabled] .btn-default:active,
-.btn-default.disabled.active,
-.btn-default[disabled].active,
-fieldset[disabled] .btn-default.active {
+.btn-default[disabled] {
   background-color: #fff;
   border-color: #ccc;
-}
-.btn-default .badge {
-  color: #fff;
-  background-color: #333;
-}
-.btn:focus,
-.btn:active:focus,
-.btn.active:focus {
-  outline: thin dotted;
-  outline: 5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
 }
 .btn:active,
 .btn.active {
   background-image: none;
-  outline: 0;
-  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  -webkit-box-shadow: inset 0 3px 5px rgb(0 0 0 / 13%);
+  box-shadow: inset 0 3px 5px rgb(0 0 0 / 13%);
 }
 
 /* Toggle Styles */
@@ -78,6 +37,11 @@ fieldset[disabled] .btn-default.active {
 .toggle {
   position: relative;
   overflow: hidden;
+  border-color: #bbb;
+}
+.toggle.disabled,
+.toggle.disabled .btn {
+  cursor: auto;
 }
 .toggle input[type="checkbox"] {
   display: none;
@@ -97,25 +61,21 @@ fieldset[disabled] .btn-default.active {
 .toggle.off .toggle-group {
   left: -100%;
 }
-.toggle-on {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 50%;
-  margin: 0;
-  border: 0;
-  border-radius: 0;
-}
+.toggle-on,
 .toggle-off {
   position: absolute;
   top: 0;
   bottom: 0;
-  left: 50%;
+  left: 0;
   right: 0;
   margin: 0;
   border: 0;
-  border-radius: 0;
+}
+.toggle-on {
+  right: 50%;
+}
+.toggle-off {
+  left: 50%;
 }
 .toggle-handle {
   position: relative;
@@ -126,15 +86,22 @@ fieldset[disabled] .btn-default.active {
   width: 0;
   border-width: 0 1px;
 }
-.toggle.btn {
-  min-width: 59px;
+
+.toggle-handle.btn-default {
+  border-color: #bbb;
+  background-color: #f1f1f1;
+}
+.toggle.btn-md {
+  min-width: 66px;
   min-height: 34px;
 }
-.toggle-on.btn {
+.toggle-on.btn-md {
   padding-right: 24px;
+  font-size: 15px;
 }
-.toggle-off.btn {
+.toggle-off.btn-md {
   padding-left: 24px;
+  font-size: 15px;
 }
 .toggle.btn-lg {
   min-width: 79px;
@@ -142,9 +109,11 @@ fieldset[disabled] .btn-default.active {
 }
 .toggle-on.btn-lg {
   padding-right: 31px;
+  font-size: 18px;
 }
 .toggle-off.btn-lg {
   padding-left: 31px;
+  font-size: 18px;
 }
 .toggle-handle.btn-lg {
   width: 40px;
@@ -155,17 +124,9 @@ fieldset[disabled] .btn-default.active {
 }
 .toggle-on.btn-sm {
   padding-right: 20px;
+  font-size: 13px;
 }
 .toggle-off.btn-sm {
   padding-left: 20px;
-}
-.toggle.btn-xs {
-  min-width: 35px;
-  min-height: 22px;
-}
-.toggle-on.btn-xs {
-  padding-right: 12px;
-}
-.toggle-off.btn-xs {
-  padding-left: 12px;
+  font-size: 13px;
 }
